[tool.poetry]
name = "programlib"
version = "6.0.0"
description = "Programs as Objects"
authors = ["Vadim Liventsev <dev@vadim.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers"
]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
gym = "^0.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"