[tool.poetry]
name = "programlib"
version = "7.2.0"
description = "Programs as Objects"
authors = ["Vadim Liventsev <dev@vadim.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers"
]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
gym = "^0.26.2"
numpy = "^1.24.2"
pyte = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"