[tool.poetry]
name = "programlib"
version = "11.0.2"
description = "Programs as Objects"
authors = ["Vadim Liventsev <dev@vadim.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers"
]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
numpy = "^1.22.4"
pyte = "^0.8.0"
contextlib-chdir = {version = "^1.0.2", python = "<3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"